# travel-kickstarter-agent

./: .env.example  .gitignore  README.md  diagnose_adk.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: implementation_plan.md  kickstart_agent_prd.md
src/: __init__.py  agent.py  cli.py  config.py  logger_config.py  memory_service.py  orchestrator.py  schemas.py  secret_manager.py  session.py  telemetry.py  tools.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_agent.py  test_cli.py  test_config.py  test_evals.py  test_live_evals.py  test_logging.py  test_orchestrator.py  test_persistence.py  test_secret_manager.py
